--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -5,8 +5,8 @@
  */
 
 .home .hero img
-  max-width 450px!important
-  max-height: 400px!important
+    max-height: 632px !important;
+    margin: 4rem auto 0px auto!important;
 
 .home .hero .action-button
   background-color: #39b4b4!important;
